--- a/applicationdevargocd.yaml
+++ b/applicationdevargocd.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app-dev
-  namespace: argocd
+  name: nginx-app-dev
+  namespace: default
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/my-app.git
-    targetRevision: HEAD
+    repoURL: https://github.com/lucasrestrepo/nginx-app-test.git
+    targetRevision: main
     path: kustomize/overlays/dev
   destination:
     server: https://kubernetes.default.svc
