--- a/applicationprdargocd.yaml
+++ b/applicationprdargocd.yaml
@@ -1,18 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app-prod
-  namespace: argocd
+  name: nginx-app-prd
+  namespace: default
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/my-app.git
-    targetRevision: HEAD
-    path: kustomize/overlays/prod
+    repoURL: https://github.com/lucasrestrepo/nginx-app-test.git
+    targetRevision: main
+    path: kustomize/overlays/prd
   destination:
     server: https://kubernetes.default.svc
-    namespace: prod
+    namespace: prd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+
