--- a/kustomize/base/rendered.yaml
+++ b/kustomize/base/rendered.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-app-test
+  name: my-app
   namespace: default
 spec:
   type: ClusterIP
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-app-test
+  name: my-app
   namespace: default
   labels:
     app: my-app
@@ -44,11 +44,11 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "nginx-app-test-test-connection"
+  name: "my-app-nginx-app-test-test-connection"
   labels:
     helm.sh/chart: nginx-app-test-0.1.0
     app.kubernetes.io/name: nginx-app-test
-    app.kubernetes.io/instance: nginx-app-test
+    app.kubernetes.io/instance: my-app
     app.kubernetes.io/version: "1.16.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -58,5 +58,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['nginx-app-test:80']
+      args: ['my-app-nginx-app-test:80']
   restartPolicy: Never
