--- a/.github/workflows/deployargo.yaml
+++ b/.github/workflows/deployargo.yaml
@@ -2,70 +2,42 @@ name: CI/CD Pipeline
 
 on:
   pull_request:
-    types:
-      - closed
     branches:
       - dev
       - prd
+
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true
     runs-on: test-argo
 
     steps:
       # Step 1: Checkout the Repository
       - name: Checkout Code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0    
 
       # Step 2: Render Helm Templates for the Environment
       - name: Render Helm Templates
         run: |
           if [[ "${{ github.ref_name }}" == "dev" ]]; then
-            helm template my-nginx-app ./helm --namespace dev -f ./helm/values-dev.yaml > kustomize/base/rendered.yaml
+            helm template my-nginx-app ./helm --namespace dev > kustomize/base/rendered.yaml
           elif [[ "${{ github.ref_name }}" == "prd" ]]; then
-            helm template my-nginx-app ./helm --namespace prd -f ./helm/values-prd.yaml > kustomize/base/rendered.yaml
+            helm template my-nginx-app ./helm --namespace prd > kustomize/base/rendered.yaml
           fi
-
       # Step 3: Apply Kustomize Overlays
       - name: Apply Kustomize Overlays
         run: |
-          set -x
-          export KUSTOMIZE_ENABLE_DEBUG=true
           if [[ "${{ github.ref_name }}" == "dev" ]]; then
-            echo "Building Kustomize for dev environment..."
-            chown $USER:$USER ./kustomize/overlays/dev/patch-values.yaml
-            chmod 777 ./kustomize/overlays/dev/patch-values.yaml
-            kustomize build ./kustomize/overlays/dev | kubectl apply -f -
+            kustomize build kustomize/overlays/dev | kubectl apply -f -
           elif [[ "${{ github.ref_name }}" == "prd" ]]; then
-            echo "Building Kustomize for prd environment..."
-            chown $USER:$USER ./kustomize/overlays/prd/patch-values.yaml
-            chmod 777 ./kustomize/overlays/prd/patch-values.yaml
-            kustomize build ./kustomize/overlays/prd | kubectl apply -f -
+            kustomize build kustomize/overlays/prd | kubectl apply -f -
           fi
-        env:
-          KUSTOMIZE_ENABLE_DEBUG: true
-
-      # Step 4: Debug Logs for Kustomize
-      - name: Debug Logs for Kustomize
-        if: failure()
-        run: |
-          echo "Kustomize execution failed. Printing debug information..."
-          echo "Listing current directory contents:"
-          ls -la $(pwd)
-          echo "Kustomize overlays/dev directory:"
-          ls -la ./kustomize/overlays/dev || echo "dev overlay missing"
-          echo "Kustomize overlays/prd directory:"
-          ls -la ./kustomize/overlays/prd || echo "prd overlay missing"
-
-      # Step 5: Log in to Argo CD CLI
+      # Step 4: Log in to Argo CD CLI
       - name: Log in to Argo CD CLI
         run: |
-          argocd login 10.42.0.209:8080 --username admin --password 4GouUjDgTj --insecure
+          argocd login 10.42.0.88:8080 --username admin --password 4GouUjDgTj --insecure
     
 
-      # Step 6: Trigger ArgoCD Sync (Optional if Auto-Sync is Disabled)
+      # Step 5: Trigger ArgoCD Sync (Optional if Auto-Sync is Disabled)
       - name: Trigger ArgoCD Sync
         run: |
           if [[ "${{ github.ref_name }}" == "dev" ]]; then
@@ -75,7 +47,3 @@ jobs:
             argocd app sync nginx-app-prd
             argocd app wait nginx-app-prd --timeout 300
           fi
-          
-    #  - name: clean
-    #    if: always()
-    #    uses: colpal/actions-clean@v1
